--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "keywords": [
     "eslint-config"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -21,16 +25,13 @@
     "dist"
   ],
   "scripts": {
-    "build": "bun run typegen && tsup --clean --dts",
+    "build": "bun scripts/typegen.ts && tsup --clean --dts",
     "stub": "tsup --format esm",
     "dev": "bunx @eslint/config-inspector --config eslint.config.ts",
     "watch": "tsup --format esm,cjs --watch",
-    "lint": "eslint --flag unstable_ts_config .",
-    "typegen": "bun scripts/typegen.ts",
-    "prepack": "bun run build",
-    "release": "bumpp && npm publish",
-    "test": "vitest",
-    "typecheck": "tsc --noEmit"
+    "format": "eslint --flag unstable_ts_config . --fix",
+    "release": "bun run build && bumpp && npm publish",
+    "test": "vitest"
   },
   "peerDependencies": {
     "@eslint-react/eslint-plugin": "^1.19.0",
