--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-slidev": "^1.0.5",
     "svelte-eslint-parser": ">=0.37.0",
-    "vue-eslint-parser": "^9.4.3"
+    "vue-eslint-parser": "latest"
   },
   "peerDependenciesMeta": {
     "@eslint-react/eslint-plugin": {
@@ -105,26 +105,26 @@
   "dependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
     "@eslint/markdown": "^6.2.2",
-    "@stylistic/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
-    "@vitest/eslint-plugin": "^1.1.25",
-    "eslint-config-flat-gitignore": "^1.0.0",
-    "eslint-merge-processors": "^1.0.0",
-    "eslint-plugin-antfu": "^3.0.0",
-    "eslint-plugin-command": "^3.0.0",
+    "@stylistic/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "@vitest/eslint-plugin": "^1.1.31",
+    "eslint-config-flat-gitignore": "^2.1.0",
+    "eslint-merge-processors": "^2.0.0",
+    "eslint-plugin-antfu": "^3.1.0",
+    "eslint-plugin-command": "^3.1.0",
     "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-jsdoc": "^50.6.3",
     "eslint-plugin-jsonc": "^2.19.1",
     "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^4.7.0",
+    "eslint-plugin-perfectionist": "^4.9.0",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-toml": "^0.12.0",
-    "eslint-plugin-unicorn": "^56.0.1",
+    "eslint-plugin-unicorn": "^57.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-yml": "^1.16.0",
-    "globals": "^15.14.0",
+    "eslint-plugin-yml": "^1.17.0",
+    "globals": "^15.15.0",
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^1.0.0",
     "parse-gitignore": "^2.0.0",
@@ -132,31 +132,31 @@
     "yaml-eslint-parser": "^1.2.3"
   },
   "devDependencies": {
-    "@antfu/ni": "^23.2.0",
-    "@eslint-react/eslint-plugin": "^1.24.1",
+    "@antfu/ni": "^23.3.1",
+    "@eslint-react/eslint-plugin": "^1.26.2",
     "@eslint/config-inspector": "^1.0.0",
     "@prettier/plugin-xml": "^3.4.1",
-    "@types/node": "^22.10.10",
-    "@unocss/eslint-plugin": "^65.4.3",
+    "@types/node": "^22.13.4",
+    "@unocss/eslint-plugin": "^66.0.0",
     "astro-eslint-parser": "^1.2.1",
-    "bumpp": "^9.11.1",
-    "eslint": "^9.19.0",
+    "bumpp": "^10.0.3",
+    "eslint": "^9.20.1",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-svelte": "^2.46.1",
     "eslint-plugin-vue": "^9.32.0",
-    "eslint-processor-vue-blocks": "^1.0.0",
-    "eslint-typegen": "^1.0.0",
+    "eslint-processor-vue-blocks": "^2.0.0",
+    "eslint-typegen": "^2.0.0",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-slidev": "^1.0.5",
-    "svelte": "^5.19.3",
+    "svelte": "^5.20.2",
     "svelte-eslint-parser": "^0.43.0",
-    "tsup": "^8.3.5",
+    "tsup": "^8.3.6",
     "typescript": "^5.7.3",
-    "vitest": "^3.0.4",
+    "vitest": "^3.0.6",
     "vue": "^3.5.13"
   }
 }
