--- a/package.json
+++ b/package.json
@@ -30,27 +30,27 @@
     "dev": "bunx @eslint/config-inspector --config eslint.config.ts",
     "watch": "tsup --format esm,cjs --watch",
     "format": "eslint . --fix",
-    "release": "bun run build && bumpp && npm publish",
+    "release": "bun run build && bumpp --all && npm publish",
     "test": "vitest"
   },
   "peerDependencies": {
     "@eslint-react/eslint-plugin": "^1.19.0",
     "@prettier/plugin-xml": "^3.4.1",
     "@unocss/eslint-plugin": ">=0.50.0",
-    "astro-eslint-parser": "^1.0.2",
+    "astro-eslint-parser": "^1.2.1",
     "eslint": "^9.10.0",
     "eslint-plugin-astro": "^1.2.0",
     "eslint-plugin-format": ">=0.1.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "eslint-plugin-solid": "^0.14.3",
+    "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-svelte": ">=2.35.1",
-    "eslint-plugin-vue": "^9.32.0",
-    "eslint-processor-vue-blocks": "^1.0.0",
+    "eslint-plugin-vue": "^10.0.0",
+    "eslint-processor-vue-blocks": "^2.0.0",
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-slidev": "^1.0.5",
     "svelte-eslint-parser": ">=0.37.0",
-    "vue-eslint-parser": "latest"
+    "vue-eslint-parser": "^10.0.0"
   },
   "peerDependenciesMeta": {
     "@eslint-react/eslint-plugin": {
@@ -133,8 +133,8 @@
   },
   "devDependencies": {
     "@antfu/ni": "^23.3.1",
-    "@eslint-react/eslint-plugin": "^1.30.1",
-    "@eslint/config-inspector": "^1.0.1",
+    "@eslint-react/eslint-plugin": "^1.30.2",
+    "@eslint/config-inspector": "^1.0.2",
     "@prettier/plugin-xml": "^3.4.1",
     "@types/node": "^22.13.9",
     "@unocss/eslint-plugin": "^66.0.0",
@@ -147,12 +147,12 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-svelte": "^2.46.1",
-    "eslint-plugin-vue": "^9.32.0",
+    "eslint-plugin-vue": "^10.0.0",
     "eslint-processor-vue-blocks": "^2.0.0",
     "eslint-typegen": "^2.0.0",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-slidev": "^1.0.5",
-    "svelte": "^5.22.1",
+    "svelte": "^5.22.2",
     "svelte-eslint-parser": "^0.43.0",
     "tsup": "^8.4.0",
     "typescript": "^5.8.2",
