--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@eslint-react/eslint-plugin": "^1.19.0",
     "@prettier/plugin-xml": "^3.4.1",
     "@unocss/eslint-plugin": ">=0.50.0",
+    "@vitest/eslint-plugin": "^1.1.36",
     "astro-eslint-parser": "^1.2.1",
     "eslint": "^9.10.0",
     "eslint-plugin-astro": "^1.2.0",
@@ -60,6 +61,9 @@
       "optional": true
     },
     "@unocss/eslint-plugin": {
+      "optional": true
+    },
+    "@vitest/eslint-plugin": {
       "optional": true
     },
     "astro-eslint-parser": {
@@ -103,22 +107,21 @@
     }
   },
   "dependencies": {
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
-    "@eslint/markdown": "^6.2.2",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
+    "@eslint/markdown": "^6.4.0",
     "@stylistic/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^8.26.0",
-    "@typescript-eslint/parser": "^8.26.0",
-    "@vitest/eslint-plugin": "^1.1.36",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
     "eslint-config-flat-gitignore": "^2.1.0",
     "eslint-merge-processors": "^2.0.0",
-    "eslint-plugin-antfu": "^3.1.0",
-    "eslint-plugin-command": "^3.1.0",
-    "eslint-plugin-import-x": "^4.6.1",
-    "eslint-plugin-jsdoc": "^50.6.3",
-    "eslint-plugin-jsonc": "^2.19.1",
-    "eslint-plugin-n": "^17.16.2",
+    "eslint-plugin-antfu": "^3.1.1",
+    "eslint-plugin-command": "^3.2.0",
+    "eslint-plugin-import-x": "^4.10.6",
+    "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-plugin-jsonc": "^2.20.0",
+    "eslint-plugin-n": "^17.17.0",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^4.9.0",
+    "eslint-plugin-perfectionist": "^4.12.1",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-toml": "^0.12.0",
     "eslint-plugin-unicorn": "^57.0.0",
@@ -133,30 +136,30 @@
   },
   "devDependencies": {
     "@antfu/ni": "^23.3.1",
-    "@eslint-react/eslint-plugin": "^1.30.2",
+    "@eslint-react/eslint-plugin": "^1.48.4",
     "@eslint/config-inspector": "^1.0.2",
     "@prettier/plugin-xml": "^3.4.1",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.14.1",
     "@unocss/eslint-plugin": "^66.0.0",
-    "astro-eslint-parser": "^1.2.1",
-    "bumpp": "^10.0.3",
-    "eslint": "^9.21.0",
+    "astro-eslint-parser": "^1.2.2",
+    "bumpp": "^10.1.0",
+    "eslint": "^9.25.1",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-svelte": "^2.46.1",
     "eslint-plugin-vue": "^10.0.0",
     "eslint-processor-vue-blocks": "^2.0.0",
-    "eslint-typegen": "^2.0.0",
+    "eslint-typegen": "^2.1.0",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-slidev": "^1.0.5",
-    "svelte": "^5.22.2",
+    "svelte": "^5.28.2",
     "svelte-eslint-parser": "^0.43.0",
     "tsup": "^8.4.0",
-    "typescript": "^5.8.2",
-    "vitest": "^3.0.7",
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.2",
     "vue": "^3.5.13"
   }
 }
