--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
+    ".": "./dist/index.js"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
