--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@eslint-react/eslint-plugin": "^1.19.0",
     "@prettier/plugin-xml": "^3.4.1",
     "@unocss/eslint-plugin": ">=0.50.0",
-    "@vitest/eslint-plugin": "^1.1.36",
+    "@vitest/eslint-plugin": "^1.2.1",
     "astro-eslint-parser": "^1.2.1",
     "eslint": "^9.10.0",
     "eslint-plugin-astro": "^1.2.0",
@@ -48,7 +48,7 @@
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-slidev": "^1.0.5",
     "svelte-eslint-parser": ">=0.37.0",
-    "vue-eslint-parser": "^10.0.0"
+    "vue-eslint-parser": "latest"
   },
   "peerDependenciesMeta": {
     "@eslint-react/eslint-plugin": {
@@ -105,26 +105,26 @@
   },
   "dependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
-    "@eslint/markdown": "^6.4.0",
-    "@stylistic/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^8.31.0",
-    "@typescript-eslint/parser": "^8.31.0",
+    "@eslint/markdown": "^6.5.0",
+    "@stylistic/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
+    "@typescript-eslint/utils": "^8.33.1",
     "eslint-config-flat-gitignore": "^2.1.0",
     "eslint-merge-processors": "^2.0.0",
     "eslint-plugin-antfu": "^3.1.1",
-    "eslint-plugin-command": "^3.2.0",
-    "eslint-plugin-import-x": "^4.10.6",
-    "eslint-plugin-jsdoc": "^50.6.9",
-    "eslint-plugin-jsonc": "^2.20.0",
-    "eslint-plugin-n": "^17.17.0",
+    "eslint-plugin-command": "^3.2.1",
+    "eslint-plugin-jsdoc": "^50.7.1",
+    "eslint-plugin-jsonc": "^2.20.1",
+    "eslint-plugin-n": "^17.19.0",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^4.12.1",
-    "eslint-plugin-regexp": "^2.7.0",
+    "eslint-plugin-perfectionist": "^4.14.0",
+    "eslint-plugin-regexp": "^2.8.0",
     "eslint-plugin-toml": "^0.12.0",
-    "eslint-plugin-unicorn": "^57.0.0",
+    "eslint-plugin-unicorn": "^59.0.1",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-yml": "^1.17.0",
-    "globals": "^16.0.0",
+    "eslint-plugin-yml": "^1.18.0",
+    "globals": "^16.2.0",
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^1.1.1",
     "parse-gitignore": "^2.0.0",
@@ -132,31 +132,32 @@
     "yaml-eslint-parser": "^1.3.0"
   },
   "devDependencies": {
-    "@antfu/ni": "^23.3.1",
-    "@eslint-react/eslint-plugin": "^1.48.4",
-    "@eslint/config-inspector": "^1.0.2",
+    "@antfu/ni": "^25.0.0",
+    "@eslint-react/eslint-plugin": "^1.51.1",
+    "@eslint/config-inspector": "^1.1.0",
     "@prettier/plugin-xml": "^3.4.1",
-    "@types/node": "^22.14.1",
-    "@unocss/eslint-plugin": "^66.0.0",
+    "@types/node": "^22.15.30",
+    "@unocss/eslint-plugin": "^66.1.3",
+    "@vitest/eslint-plugin": "^1.2.1",
     "astro-eslint-parser": "^1.2.2",
-    "bumpp": "^10.1.0",
-    "eslint": "^9.25.1",
+    "bumpp": "^10.1.1",
+    "eslint": "^9.28.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-solid": "^0.14.5",
-    "eslint-plugin-svelte": "^2.46.1",
-    "eslint-plugin-vue": "^10.0.0",
+    "eslint-plugin-svelte": "^3.9.1",
+    "eslint-plugin-vue": "^10.2.0",
     "eslint-processor-vue-blocks": "^2.0.0",
-    "eslint-typegen": "^2.1.0",
+    "eslint-typegen": "^2.2.0",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-slidev": "^1.0.5",
-    "svelte": "^5.28.2",
-    "svelte-eslint-parser": "^0.43.0",
-    "tsup": "^8.4.0",
+    "svelte": "^5.33.17",
+    "svelte-eslint-parser": "^1.2.0",
+    "tsup": "^8.5.0",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.2",
-    "vue": "^3.5.13"
+    "vitest": "^3.2.2",
+    "vue": "^3.5.16"
   }
 }
